Where "NUMBER" is the bug number.

There are always more changes than listed here, these are just the
highlights. The full CVS log is available at www.xchat.org/cvslog/

------------------------------------------------------------------------------
 2.8.x - DD/MMM/2007
------------------------------------------------------------------------------

 - Updated translations (be, ca, cs, el, hu, sv, uk).
 - Fixed the "Save As" function saving to the wrong folder in the URL Grabber.
 - Fixed a bug in the "Copy Selected Link" URL right-click on non-ASCII chars.
 - Fixed small bug: #100239 buffer overflow in setup dialog.
 - 
 - 
 - Plugin API:
  * Added "modes" to xchat_get_info(). Returns the current channel modes, if
    they are known.
  * Fixed "event_event name" for xchat_get_info() to match the docs exactly,
    but 2.8.0 (mis)behaviour works too.
 - Perl (Lian Wan Situ)
  * Execute the shutdown callback before removing the hooks so commands
    created by the script can be used in the callback.


------------------------------------------------------------------------------
 2.8.0 - 03/Jan/2007
------------------------------------------------------------------------------

 - Updated translations (cs, de, gl, hu).
 - XChat now requires at least GTK+ 2.10.
 - Added a system tray icon (aka Notification Area). This is probably the
   biggest feature addition in this series. Also added a /TRAY command so
   scripts can manipulate the icon.
 - Added partial support for numeric 005 token ELIST (min users only).
 - Brand new channel list window: GtkTreeView, nicer layout, less CPU power
   when downloading very large list, uses less memory, supports regexp/
   patternmatch/substring search and supports downloading LIST with minusers to
   save time (only on some networks that support ELIST).
 - Overhauled URL opening on Unix, it now tries xdg-open first, then auto-
   detects Gnome or KDE to run gnome-open or kfmclient. URLs with quotes